// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButtonBar renders the 'lg' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--lg"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <IconButton
    className="class"
    disabled={false}
    divider="right"
    iconClassName="class"
    iconSize={20}
    label="Label 2"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <FeatureToggle(OverflowMenu)
    className="security--icon-button-bar__overflow-menu"
    direction="top"
    flipped={true}
    menuOptionsClass="security--icon-button-bar__overflow-menu-options security--icon-button-bar__overflow-menu-options--top security--icon-button-bar__overflow-menu-options--lg"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    selectorPrimaryFocus=".security--icon-button-bar--primary-focus"
  >
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 4"
      key="Label 4"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 3"
      key="Label 3"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
  </FeatureToggle(OverflowMenu)>
</div>
`;

exports[`IconButtonBar renders the 'md' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--md"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="md"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <IconButton
    className="class"
    disabled={false}
    divider="right"
    iconClassName="class"
    iconSize={20}
    label="Label 2"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="md"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <FeatureToggle(OverflowMenu)
    className="security--icon-button-bar__overflow-menu"
    direction="top"
    flipped={true}
    menuOptionsClass="security--icon-button-bar__overflow-menu-options security--icon-button-bar__overflow-menu-options--top security--icon-button-bar__overflow-menu-options--md"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    selectorPrimaryFocus=".security--icon-button-bar--primary-focus"
  >
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 4"
      key="Label 4"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 3"
      key="Label 3"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
  </FeatureToggle(OverflowMenu)>
</div>
`;

exports[`IconButtonBar renders the 'sm' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--sm"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="sm"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <IconButton
    className="class"
    disabled={false}
    divider="right"
    iconClassName="class"
    iconSize={20}
    label="Label 2"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="sm"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <FeatureToggle(OverflowMenu)
    className="security--icon-button-bar__overflow-menu"
    direction="top"
    flipped={true}
    menuOptionsClass="security--icon-button-bar__overflow-menu-options security--icon-button-bar__overflow-menu-options--top security--icon-button-bar__overflow-menu-options--sm"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    selectorPrimaryFocus=".security--icon-button-bar--primary-focus"
  >
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 4"
      key="Label 4"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 3"
      key="Label 3"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
  </FeatureToggle(OverflowMenu)>
</div>
`;

exports[`IconButtonBar renders the 'xl' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--xl"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="xl"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <IconButton
    className="class"
    disabled={false}
    divider="right"
    iconClassName="class"
    iconSize={20}
    label="Label 2"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="xl"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <FeatureToggle(OverflowMenu)
    className="security--icon-button-bar__overflow-menu"
    direction="top"
    flipped={true}
    menuOptionsClass="security--icon-button-bar__overflow-menu-options security--icon-button-bar__overflow-menu-options--top security--icon-button-bar__overflow-menu-options--xl"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    selectorPrimaryFocus=".security--icon-button-bar--primary-focus"
  >
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 4"
      key="Label 4"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 3"
      key="Label 3"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
  </FeatureToggle(OverflowMenu)>
</div>
`;

exports[`IconButtonBar renders the length of '1' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--lg"
>
  <FeatureToggle(OverflowMenu)
    className="security--icon-button-bar__overflow-menu"
    direction="top"
    flipped={true}
    menuOptionsClass="security--icon-button-bar__overflow-menu-options security--icon-button-bar__overflow-menu-options--top security--icon-button-bar__overflow-menu-options--lg"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    selectorPrimaryFocus=".security--icon-button-bar--primary-focus"
  >
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 4"
      key="Label 4"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 3"
      key="Label 3"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 2"
      key="Label 2"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 1"
      key="Label 1"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
  </FeatureToggle(OverflowMenu)>
</div>
`;

exports[`IconButtonBar renders the length of '2' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--lg"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <FeatureToggle(OverflowMenu)
    className="security--icon-button-bar__overflow-menu"
    direction="top"
    flipped={true}
    menuOptionsClass="security--icon-button-bar__overflow-menu-options security--icon-button-bar__overflow-menu-options--top security--icon-button-bar__overflow-menu-options--lg"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    selectorPrimaryFocus=".security--icon-button-bar--primary-focus"
  >
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 4"
      key="Label 4"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 3"
      key="Label 3"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 2"
      key="Label 2"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
  </FeatureToggle(OverflowMenu)>
</div>
`;

exports[`IconButtonBar renders the length of '3' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--lg"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <IconButton
    className="class"
    disabled={false}
    divider="right"
    iconClassName="class"
    iconSize={20}
    label="Label 2"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <FeatureToggle(OverflowMenu)
    className="security--icon-button-bar__overflow-menu"
    direction="top"
    flipped={true}
    menuOptionsClass="security--icon-button-bar__overflow-menu-options security--icon-button-bar__overflow-menu-options--top security--icon-button-bar__overflow-menu-options--lg"
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    selectorPrimaryFocus=".security--icon-button-bar--primary-focus"
  >
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 4"
      key="Label 4"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
    <OverflowMenuItem
      className="class"
      disabled={false}
      hasDivider={false}
      isDelete={false}
      itemText="Label 3"
      key="Label 3"
      onClick={[Function]}
      onKeyDown={[Function]}
    />
  </FeatureToggle(OverflowMenu)>
</div>
`;

exports[`IconButtonBar renders the length of '4' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--lg"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <IconButton
    className="class"
    disabled={false}
    divider="right"
    iconClassName="class"
    iconSize={20}
    label="Label 2"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="sides"
    iconClassName="class"
    iconSize={20}
    label="Label 3"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    iconClassName="class"
    iconSize={20}
    label="Label 4"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
</div>
`;

exports[`IconButtonBar renders the length of '5' variation 1`] = `
<div
  className="security--icon-button-bar security--icon-button-bar--lg"
>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="left"
    iconClassName="class"
    iconSize={20}
    label="Label 1"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <IconButton
    className="class"
    disabled={false}
    divider="right"
    iconClassName="class"
    iconSize={20}
    label="Label 2"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    divider="sides"
    iconClassName="class"
    iconSize={20}
    label="Label 3"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
  <span
    aria-hidden={true}
    className="security--icon-button-bar__divider"
  >
    <span
      className="security--icon-button-bar__divider__inner"
    />
  </span>
  <IconButton
    className="class"
    disabled={false}
    iconClassName="class"
    iconSize={20}
    label="Label 4"
    onClick={[Function]}
    path={null}
    renderIcon={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    size="lg"
    state={false}
    tooltip={true}
    tooltipDirection="top"
  />
</div>
`;
